# retail-store-agent-takehome

./: .env.example  .gitignore  APPROACH.md  ASSIGNMENT.md  DATA_DICTIONARY.md  ITERATION.md  README.md  pyproject.toml
data/: customers.csv  inventory.csv  order_lines.csv  orders.csv  products.csv  promotions.csv  returns.csv  supplier_catalog.csv  suppliers.csv
docs/: domain-model.md  tools.md  writeup.md
evals/: run.py
evals/scenarios/: a01_tee_zero_hints_must_ask.yaml  a02_negation_narrows_still_ambiguous.yaml  a03_nonexistent_variant_no_substitution.yaml  a04_customer_order_mismatch.yaml  a05_bare_revenue_gross_vs_net.yaml  a06_over_return_beyond_ever_sold.yaml  a07_hypothetical_promo_must_not_mutate.yaml  a08_undo_last_sale_no_delete_tool.yaml  a09_typo_no_fabricated_match.yaml  a10_multi_intent_single_turn.yaml  e01_exact_depletion_sale.yaml  e02_mixed_shortage_atomic.yaml  e03_duplicate_sku_merge.yaml  e04_order_level_discount_user_specified.yaml  e05_no_payment_method_defaults_cash.yaml  e06_no_date_mentioned_defaults_today.yaml  e07_direct_sku_reference.yaml  e08_product_id_reference.yaml  e09_customer_email_lookup.yaml  e10_customer_case_insensitive.yaml  e11_relative_date_yesterday.yaml  e12_quantity_word_dozen.yaml  e13_quantity_word_half_dozen.yaml  h01_order_discount_over_100_rejected.yaml  h02_order_discount_negative_rejected.yaml  (+57 more)
tests/: conftest.py  test_agent.py  test_config.py  test_dates.py  test_db.py  test_pricing.py  test_purchasing.py  test_quantities.py  test_reports.py  test_returns.py  test_sales.py  test_tools.py
(+16 files in other folders)
