[project]
name = "store-agent"
version = "0.1.0"
description = "AI agent that runs a small retail store — take-home submission"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.scripts]
acceptDaniel = "store_agent.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/store_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
